remove unnecessary comment out

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <route-manager>
-      <!-- <header> -->
+      <header>
         <h1>This is common layout</h1>
       </header>
       <template data-fallbackid="PageNotFound">
