Improved function names and more consistent examples in the readme.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <b>This is common header</b>
       </header>
       <template data-fallbackid="PageNotFound">
-        <h1>404</h1>
-        <p>Page not found</p>
+        <h1>404: Page not found</h1>
       </template>
       <template data-routeid="home">
         <h1>Home</h1>
@@ -38,16 +37,3 @@
     </route-manager>
   </body>
 </html>
-<html>
-  <body></body>
-</html>
-<route-manager>
-  <template data-fallback-id="PageNotFound">
-    <h2>404</h2>
-    <p>Page not found</p>
-  </template>
-  <template data-routeid="home">
-    <h2>Home</h2>
-    <p>This is home page</p>
-  </template>
-</route-manager>
